# hybridbar

./: .envrc  README.md  default.nix  flake.nix
data/: com.github.hcsubser.hybridbar.gschema.xml
data/sample/: SampleIndicator.vala
data/styles/: panel.css
indicators/: build.sh
indicators/bluetooth/: README.md  meson.build
indicators/bluetooth/data/: com.github.hcsubser.hybridbar.bluetooth.gschema.xml  gresource.xml  meson.build
indicators/bluetooth/src/Services/: Manager.vala
indicators/bluetooth/src/Widgets/: DisplayWidget.vala  PopoverWidget.vala
indicators/calendar/: meson.build
indicators/calendar/data/: GridDay.css  com.github.hcsubser.hybridbar.calendar.gschema.xml  datetime.gresource.xml
indicators/calendar/src/: Indicator.vala
indicators/calendar/src/Widgets/: EventRow.vala  PanelLabel.vala
indicators/calendar/src/Widgets/calendar/: CalendarView.vala  GridDay.vala  Util.vala
indicators/menu/: meson.build
indicators/menu/src/: Indicator.vala  SlingshotView.vala
indicators/menu/src/Backend/: AppSystem.vala
indicators/menu/src/Widgets/: PageChecker.vala
indicators/menu/src/synapse-plugins/: calculator-plugin.vala
indicators/network/: meson.build
indicators/network/src/common/Widgets/: WidgetNMInterface.vala
indicators/session/: meson.build
indicators/session/src/: Indicator.vala
indicators/session/src/Services/: UserManager.vala
indicators/sound/: meson.build
indicators/sound/data/: com.github.hcsubser.hybridbar.sound.gschema.xml  mask.gresource.xml
indicators/sound/src/: Indicator.vala
indicators/sound/src/Services/: MediaPlayer.vala  PulseAudioManager.vala  Volume-control.vala
indicators/sound/src/Widgets/: DeviceManagerWidget.vala  DisplayWidget.vala  PlayerRow.vala
indicators/system-tray/: README.md  meson.build  meson_options.txt
indicators/system-tray/src/: AyatanaIndicator.vala  Indicator.vala  IndicatorButton.vala  IndicatorFactory.vala  IndicatorIface.vala  IndicatorLoader.vala  IndicatorObject.vala  SubMenuButton.vala
lib/: IndicatorManager.vala  config.vapi  meson.build
nix/: default.nix  hybridbar-indicator-bluetooth.nix  hybridbar-indicator-calendar.nix  hybridbar-indicator-menu.nix  hybridbar-indicator-network.nix  hybridbar-indicator-session.nix  hybridbar-indicator-sound.nix  hybridbar-indicator-system-tray.nix  hybridbar.nix  indicators.nix  wrapper.nix
src/: Application.vala  PanelWindow.vala  SessionManager.vala  meson.build
src/Services/: IndicatorSorter.vala  PopoverManager.vala  SettingsManager.vala
src/Widgets/: IndicatorMenuBar.vala  IndicatorPopover.vala  Panel.vala
